Inserted comments into both HTML and CSS to better describe sections of code and what they control

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -7,6 +7,7 @@
     <title>Horiseon - A SEO Solution</title>
 </head>
 
+   <!-- List of links on top of page, when clicked should navigate to the appropriate section-->
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -24,6 +25,8 @@
             </ul>
         </div>
     </div>
+
+   <!--The below content is the body of the page describing services and providing images to go with them-->
     <div class="hero"></div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
@@ -48,6 +51,8 @@
             </p>
         </div>
     </div>
+
+   <!-- This section controls the sidebar of the page pointing to graphicals and small descriptions-->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,6 +76,8 @@
             </p>
         </div>
     </div>
+
+   <!-- Footer section -->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
